[project]
name = "rebello"
version = "0.1.0"
description = "Editor-driven Markdown interface for Trello"
readme = "README.md"
authors = [
    { name = "alexjuda", email = "alexanderjuda@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
]

[project.scripts]
rebello = "rebello.cli:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "responses>=0.25.8",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]
